-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 12.0.0-beta2
-
None
-
-
09e495f01 (master)
Steps to reproduce
- create new widget app
- open mainwindow.cpp
- put comma after 'this' as on screenshot
- no way to follow inside 'setupUi'
you may say that 'code is wrong', but that happens every time then edit code, for example i forgot parameters to function and want to see inside? but cant do this without fixing code
if it is not a bug, but very annoying (
another 'wrong code' is:
1. add same 'case' in 'switch' (want to add another new cases with copy\paste)
2. no way to 'follow' in existing 'cases'
- relates to
-
QTCREATORBUG-26409 Improve tooltip when function signature does not match caller
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-29814 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 516548,3 | ClangCodeModel: Fall back to built-in code model when following symbols | master | qt-creator/qt-creator | Status: MERGED | -1 | 0 |