src/plugins/cppeditor/cppmodelmanager.h
@@ -5,6 +5,7 @@
 
 #include "cppeditor_global.h"
 
+#include "cpptoolsreuse.h"
 #include "cursorineditor.h"
 #include "projectinfo.h"
 #include "projectpart.h"
@@ -174,7 +175,8 @@ public:
     enum class Backend { Builtin, Best };
     static void followSymbol(const CursorInEditor &data,
                              const Utils::LinkHandler &processLinkCallback,
-                             bool resolveTarget, bool inNextSplit, Backend backend = Backend::Best);
+                             bool resolveTarget, bool inNextSplit,
+                             FollowSymbolMode mode, Backend backend = Backend::Best);
     static void followSymbolToType(const CursorInEditor &data,
                                    const Utils::LinkHandler &processLinkCallback, bool inNextSplit,
                                    Backend backend = Backend::Best);
