src/plugins/cppeditor/cppmodelmanagersupport.h
@@ -4,6 +4,7 @@
 #pragma once
 
 #include "cppeditor_global.h"
+#include "cpptoolsreuse.h"
 #include "cursorineditor.h"
 
 #include <utils/link.h>
@@ -12,7 +13,6 @@
 #include <QString>
 
 #include <functional>
-#include <memory>
 
 namespace Core { class SearchResult; }
 namespace TextEditor {
@@ -41,6 +41,7 @@ public:
 
     virtual void followSymbol(const CursorInEditor &data,
                               const Utils::LinkHandler &processLinkCallback,
+                              FollowSymbolMode mode,
                               bool resolveTarget, bool inNextSplit) = 0;
     virtual void followSymbolToType(const CursorInEditor &data,
                                    const Utils::LinkHandler &processLinkCallback,
